[FIX] web: remove 'overlay' overflow on modals
The o-scrollbar-overlay mixin was introduced for a fix on the enterprise
home menu (see related commit in enterprise that comes with this PR).
It was used on modal elements at the same time for no apparent reason:
the modal in the backend do not even scroll as this is their modal-body
that does.

This now introduced a bug in the frontend: some code which allows to
scroll to an element in a modal was not working on chrome because the
related code was checking for the element with 'overflow: auto'... which
it could not find since that element uses 'overflow: overlay'. As
overlay is a deprecated value, it seemed better to remove its use rather
than adapt the frontend code expecting the 'auto' value. This also solve
a design inconsistency between Chrome and Firefox (where the overlay
value is simply ignored).

closes odoo/odoo#58462

X-original-commit: 5ffb7bb2f461de2b3cf95ef0df6a24b668bf9bd3
Related: odoo/enterprise#13532

--- a/addons/web/static/src/scss/modal.scss
+++ b/addons/web/static/src/scss/modal.scss
@@ -121,12 +121,6 @@
     }
 }
 
-body.modal-open {
-    .modal {
-        @include o-scrollbar-overlay;
-    }
-}
-
 // Temporary fix for modals which are not instantiated thanks to the Dialog
 // JS classes (deprecated case) (see bootstrap_overridden.scss) + Frontend.
 //
